# pyproject

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile  pyproject.toml
.github/workflows/: pypi-release.yaml  python-wheels.yaml  release.yaml
crates/pyproject-changelog/: Cargo.toml
crates/pyproject-changelog/src/: main.rs
crates/pyproject-wasm/: Cargo.toml
py/: justfile  pyproject.toml
src/: analyzer.rs  arguments.rs  builtin.rs  builtins.rs  completions.rs  config.rs  dependency.rs  diagnostic.rs  document.rs  error.rs  json_schema_error.rs  lib.rs  main.rs  node_ext.rs  path_ext.rs  pypi.rs  pypi_client.rs  quickfix.rs  quickfixer.rs  range.rs  re.rs  resolver.rs  rope_ext.rs  rule.rs  rule_context.rs  schema.rs  schema_error.rs  schema_pointer.rs  schema_retriever.rs  schema_store.rs  schemas.rs  server.rs  span.rs  subcommand.rs
src/rule/: build_system.rs  classifiers.txt  dependency_groups.rs  entry_points_import_check.py  json_schema.rs  project_classifiers.rs  project_dependencies.rs  project_dependencies_version_bounds.rs  project_dependency_deprecations.rs  project_dependency_updates.rs  project_description.rs  project_dynamic.rs  project_entry_points.rs  project_entry_points_extras.rs  project_entry_points_importable.rs  project_import_names.rs  project_keywords.rs  project_license.rs  project_license_classifiers.rs  project_license_classifiers_deprecated.rs  project_license_files.rs  project_license_value.rs  project_license_value_deprecations.rs  project_name.rs  project_name_normalization.rs  project_optional_dependencies.rs  project_people.rs  project_readme.rs  project_readme_content_type.rs  project_requires_python.rs  project_requires_python_upper_bound.rs  project_unknown_keys.rs  project_urls.rs  project_version.rs  schema.rs  semantic.rs  syntax.rs  top_level_unknown_keys.rs
src/subcommand/: check.rs  format.rs  server.rs
tests/: integration.rs
