[package]
name = "pyproject"
version = "0.1.0"
edition = "2024"

[lints.rust]
mismatched_lifetime_syntaxes = "allow"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

[lints.clippy]
all = { level = "deny", priority = -1 }
arbitrary-source-item-ordering = "deny"
enum_glob_use = "allow"
ignore_without_reason = "allow"
needless_pass_by_value = "allow"
pedantic = { level = "deny", priority = -1 }
similar_names = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
type_complexity = "allow"
undocumented_unsafe_blocks = "deny"
unnecessary_wraps = "allow"
wildcard_imports = "allow"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
env_logger = "0.11.8"
log = "0.4.28"
regex = "1.12.2"
ropey = "1.6.1"
rowan = "0.16.1"
taplo = "0.14.0"
text-size = "1.1.1"
tokio = { version = "1.48.0", features = ["io-std", "macros", "rt-multi-thread"] }
tower-lsp = "0.20.0"

[dev-dependencies]
indoc = "2.0.7"
pretty_assertions = "1.4.1"
serde_json = "1.0.145"
tower-test = "0.4.0"
