[package]
name = "pyproject"
version = "0.1.0"
description = "A linter and language server for `pyproject.toml` files"
authors = ["Liam <liam@scalzulli.com>"]
license = "CC0-1.0"
homepage = "https://github.com/terror/pyproject"
repository = "https://github.com/terror/pyproject"
edition = "2024"
exclude = ["/screenshot.png"]
categories = ["development-tools"]
keywords = ["productivity", "language-servers", "python", "toml"]
resolver = "2"

[profile.release]
codegen-units = 1
lto = true

[lints.rust]
mismatched_lifetime_syntaxes = "allow"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }

[lints.clippy]
all = { level = "deny", priority = -1 }
arbitrary-source-item-ordering = "deny"
enum_glob_use = "allow"
ignore_without_reason = "allow"
needless_pass_by_value = "allow"
pedantic = { level = "deny", priority = -1 }
similar_names = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
type_complexity = "allow"
undocumented_unsafe_blocks = "deny"
unnecessary_wraps = "allow"
wildcard_imports = "allow"

[dependencies]
anyhow = "1.0.100"
ariadne = "0.6.0"
clap = { version = "4.5.53", features = ["derive"] }
env_logger = "0.11.8"
globwalk = "0.9.1"
log = "0.4.28"
mailparse = "0.16.1"
owo-colors = "4.2.3"
pep440_rs = "0.7.3"
pep508_rs = "0.9.2"
rayon = "1.11.0"
reqwest = { version = "0.12.24", default-features = false, features = [
  "blocking",
  "json",
  "rustls-tls",
] }
ropey = "1.6.1"
rowan = "0.16.1"
similar = "2.7.0"
spdx = "0.12.0"
taplo = "0.14.0"
tempfile = "3.23.0"
text-size = "1.1.1"
tokio = { version = "1.48.0", features = ["io-std", "macros", "rt-multi-thread"] }
tower-lsp = "0.20.0"
jsonschema = "0.37.1"
serde_json = "1.0.145"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
indoc = "2.0.7"
pretty_assertions = "1.4.1"
tempfile = "3.23.0"
tower-test = "0.4.0"
