[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pyproject"
version = "1!0.1.2"
requires-python = ">=3.12"
authors = [{ name = "Liam Scalzulli", email = "liam@scalzulli.com" }]
description = "A linter and language server for `pyproject.toml` files"
license = "CC0-1.0"
readme = { file = "README.md", content-type = "text/markdown" }
classifiers = [
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "Topic :: Software Development",
  "Topic :: Text Editors :: Integrated Development Environments (IDE)"
]

[project.urls]
Homepage = "https://github.com/terror/pyproject"

[tool.maturin]
bindings = "bin"
strip = true
